Add background color update content

--- a/index.html
+++ b/index.html
@@ -32,11 +32,20 @@
         your experience.
       </p>
     <![endif]-->
+    <section class="outline">
+      <h1>Hi. I'm Megan.</h1>
+      <p>
+        I'm a Virtual Assistant who specializes in
+        <em>web design &amp development</em>. I'm very versatile and enjoy the
+        flexibility of working as an assistnat. I can use both my anaytical and
+        creative sides.
+      </p>
+    </section>
 
     <section class="wrapper">
-      <div class="div-1">Div 1</div>
-      <div class="div-2">Div 2</div>
-      <div class="div-3">Div 3</div>
+      <div class="div-1">Administrative Services</div>
+      <div class="div-2">Web Development & Design</div>
+      <div class="div-3">Personal Assistant Services</div>
     </section>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
